<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/homepageCardView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:translationX="20dp"
        android:translationY="20dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/homepageProfilePicture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/homepageListAndValueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/black"
        android:text="@string/homepage_list_and_value"
        app:layout_constraintStart_toEndOf="@+id/homepageCardView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/homepage_total_value"
        app:layout_constraintBottom_toBottomOf="@+id/homepageListAndValueText"
        app:layout_constraintStart_toEndOf="@+id/homepageListAndValueText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/selectItemsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/homepage_button_background"
        android:text="@string/select"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepageCardView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sortFilterItemsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/homepage_button_background"
        android:text="@string/sort_filter"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/selectItemsButton"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintStart_toEndOf="@+id/selectItemsButton"
        app:layout_constraintTop_toBottomOf="@+id/homepageCardView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/homepage_button_background"
        android:text="@string/add"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/selectItemsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepageCardView" />

    <ListView
        android:id="@+id/homepageListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:divider="@color/white"
        android:dividerHeight="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortFilterItemsButton" />
<!--=======-->
<!--        app:layout_constraintTop_toBottomOf="@+id/selectItemsButton" />-->

</androidx.constraintlayout.widget.ConstraintLayout>