<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Welcome!"
        android:textColor="#1EB4B3"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fragments_rounded_corner"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#4F475D"
            android:text="Please create an account to get started."
            android:textSize="20sp" />

        <ImageView
            android:layout_width="133dp"
            android:layout_height="119dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="40dp"
            android:src="@drawable/ic_register_title" />

        <!--            Username            -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:background="@drawable/small_white_rounded_corner"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:src="@drawable/ic_register_username" />

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="Username"
                android:padding="10dp"
                android:textSize="20sp" />

        </LinearLayout>

        <!--            Email            -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:background="@drawable/small_white_rounded_corner"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:src="@drawable/ic_register_email" />

            <EditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="Email"
                android:padding="10dp"
                android:textSize="20sp" />

        </LinearLayout>

        <!--            Password            -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:background="@drawable/small_white_rounded_corner"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:src="@drawable/ic_register_password" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="Password"
                android:padding="10dp"
                android:textSize="20sp" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_jump_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:layout_gravity="end"
            android:layout_marginEnd="40dp"
            android:textSize="16sp"
            android:textColor="#72638C"/>

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="50dp"
            android:textSize="20sp"
            android:backgroundTint="#1EB4B3"
            android:text="Create Account"/>

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Skip"
            android:layout_gravity="end"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="50dp"
            android:textSize="15sp"
            android:textColor="#72638C"/>


    </LinearLayout>

</LinearLayout>